Will now only send email in production mode

--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -6,3 +6,5 @@ pippo.passwordresetrequest = Someone (hopefully you) has requested a password re
 pippo.passwordresetsuccess = Someone (hopefully you) successfully performed a password reset. Your new password is:\n\n{password}
 
 pippo.collectioninvite = You have been invited to a new collection. Please click the link below to head over to your invitations page: {frontend}/invitations.html
+
+pippo.notifyadminonverify = The following email has registered (and verified the email) to SERP-connect:\n\n{email}
