Send signup emails to non-registered users
Inviting non-registered (i.e. not found by AccountSystem) users
to a collection will create a new account for them and send a
"please sign up here"-kind of email.

Fixes #66

--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -9,4 +9,6 @@ pippo.collectioninvite = You have been invited to a new collection. Please click
 
 pippo.collectioninvitenewuser = You have been invited to a new collection however you aren't registered in our system. Please click the link below to sign up: {frontend}/login.html 
 
+pippo.collectioninviteaction = {user} just {action} your invitation to the collection {collection}.
+
 pippo.notifyadminonverify = The following email has registered (and verified the email) to SERP-connect:\n\n{email}
