--- a/src/main/resources/conf/messages_en.properties
+++ b/src/main/resources/conf/messages_en.properties
@@ -7,4 +7,6 @@ pippo.passwordresetsuccess = Someone (hopefully you) successfully performed a pa
 
 pippo.collectioninvite = You have been invited to a new collection. Please click the link below to head over to your invitations page: {frontend}/invitations.html
 
+pippo.collectioninvitenewuser = You have been invited to a new collection however you aren't registered in our system. Please click the link below to sign up: {frontend}/login.html 
+
 pippo.notifyadminonverify = The following email has registered (and verified the email) to SERP-connect:\n\n{email}
